schema/testdata/validation_clashing_explicit_implicit_inputs/schema.keel
model Post {
    fields {
        title Text
    }

    operations {
        create createPost() with (title, coolTitle: Text) {
            @set(post.title = coolTitle)
        }
        list listPost(id, coolId: ID) {
            @where(post.id == coolId)
        }
    }
}
