schema/testdata/errors/clashing_explicit_implicit_inputs.keel
model Post {
    fields {
        title Text
    }

    actions {
        create createPost() with (title, coolTitle: Text) {
            //expect-error:18:28:ActionInputError:title is already being used as a value input so cannot also be used in @set
            @set(post.title = coolTitle)
        }
    }
}
